--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,8 @@
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "prefer-const": "error"
   },
   "plugins": ["p5js"]
 }
