--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
     "lint": "eslint . --fix --max-warnings=0",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +22,8 @@
     "eslint-plugin-p5js": "^1.0.0",
     "husky": "^8.0.3",
     "prettier": "3.0.3"
+  },
+  "dependencies": {
+    "astro": "^3.0.10"
   }
 }
